--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# - Datasource
+spring.datasource.url= jdbc:mysql://localhost:3307/login?useSSL=true
+spring.datasource.username=root
+spring.datasource.password=root
 
+# - Keep the connection alive if idle for a long time
+
+spring.datasource.tomcat.test-while-idle = true
+spring.datasource.tomcat.validation-query= SELECT 1
+
+# - Show log for each sql query
+
+spring.jpa.show-sql = true
+
+# - Hibernate ddl auto (create,create-drop,update)
+
+spring.jpa.hibernate.ddl-auto = update
+
+# - Configuration SQL dialect to make Hibernate generate better SQL for the chosen database
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
