--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # - Datasource
-spring.datasource.url= jdbc:mysql://localhost:3307/login?useSSL=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.config.import=file:env.properties
+spring.datasource.url= jdbc:mysql://${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 # - Keep the connection alive if idle for a long time
 
